fixed jump commands on project lists

--- a/css/app.css
+++ b/css/app.css
@@ -3092,10 +3092,14 @@ button {
 }
 
 /* line 8, sass/_list-showcase.scss */
+.list section {
+  overflow: auto;
+}
+/* line 9, sass/_list-showcase.scss */
 .list ul {
   margin: 0;
 }
-/* line 9, sass/_list-showcase.scss */
+/* line 10, sass/_list-showcase.scss */
 .list li {
   border-bottom: 1px solid #e0e0e0;
   position: relative;
@@ -3104,7 +3108,7 @@ button {
   width: 100%;
   float: left;
 }
-/* line 14, sass/_list-showcase.scss */
+/* line 15, sass/_list-showcase.scss */
 .projects .list li:nth-child(n+2) {
   position: relative;
   padding-left: 0;
@@ -3112,34 +3116,34 @@ button {
   width: 50%;
   float: left;
 }
-/* line 17, sass/_list-showcase.scss */
+/* line 18, sass/_list-showcase.scss */
 .projects .list li:nth-child(n+2) p {
   margin: 0;
 }
-/* line 20, sass/_list-showcase.scss */
+/* line 21, sass/_list-showcase.scss */
 .list h3 {
   margin-top: 1.25em;
   margin-bottom: 1.25em;
 }
-/* line 25, sass/_list-showcase.scss */
+/* line 26, sass/_list-showcase.scss */
 .list li:first-child h3 {
   margin-top: 1em;
 }
-/* line 26, sass/_list-showcase.scss */
+/* line 27, sass/_list-showcase.scss */
 .list li:first-child h4 {
   margin-top: 0;
 }
-/* line 29, sass/_list-showcase.scss */
+/* line 30, sass/_list-showcase.scss */
 .list li:first-child h4 a {
   margin-top: 0;
   padding-top: 0;
 }
-/* line 35, sass/_list-showcase.scss */
+/* line 36, sass/_list-showcase.scss */
 .list h4 {
   width: 75%;
   position: relative;
 }
-/* line 39, sass/_list-showcase.scss */
+/* line 40, sass/_list-showcase.scss */
 .list a {
   display: block;
   background: white;
@@ -3152,7 +3156,7 @@ button {
   -o-transition: box-shadow 150ms ease;
   transition: box-shadow 150ms ease;
 }
-/* line 48, sass/_list-showcase.scss */
+/* line 49, sass/_list-showcase.scss */
 .list .thumb {
   overflow: hidden;
   height: 0px;
@@ -3171,19 +3175,19 @@ button {
   -o-transform: rotate(0);
   transform: rotate(0);
 }
-/* line 59, sass/_list-showcase.scss */
+/* line 60, sass/_list-showcase.scss */
 .list .thumb img {
   position: absolute;
   bottom: 0;
   left: 50%;
   margin-left: -98.5px;
 }
-/* line 66, sass/_list-showcase.scss */
+/* line 67, sass/_list-showcase.scss */
 .list .wide.thumb img {
   margin-left: -200px;
 }
 
-/* line 70, sass/_list-showcase.scss */
+/* line 71, sass/_list-showcase.scss */
 .covers-container li:nth-child(n+2) {
   position: relative;
   padding-left: 0;
@@ -3191,7 +3195,7 @@ button {
   width: 50%;
   float: left;
 }
-/* line 72, sass/_list-showcase.scss */
+/* line 73, sass/_list-showcase.scss */
 .covers-container .list a {
   padding-left: 1em;
   margin-left: -1em;
@@ -3208,36 +3212,36 @@ button {
         */
 }
 
-/* line 90, sass/_list-showcase.scss */
+/* line 91, sass/_list-showcase.scss */
 .viewer .list {
   width: 589px;
   float: right;
 }
 
-/* line 97, sass/_list-showcase.scss */
+/* line 98, sass/_list-showcase.scss */
 .profile .list li:first-child h3 {
   margin-top: 0;
 }
-/* line 98, sass/_list-showcase.scss */
+/* line 99, sass/_list-showcase.scss */
 .profile .list li:nth-child(n+2) {
   padding: 1.5em 0;
 }
-/* line 99, sass/_list-showcase.scss */
+/* line 100, sass/_list-showcase.scss */
 .profile .list li:last-child {
   margin-bottom: 1.25em;
 }
-/* line 101, sass/_list-showcase.scss */
+/* line 102, sass/_list-showcase.scss */
 .profile .list h4 {
   margin: 0;
   margin-bottom: 0.25em;
   line-height: 1;
 }
-/* line 106, sass/_list-showcase.scss */
+/* line 107, sass/_list-showcase.scss */
 .profile .list a {
   padding: 0;
   margin: 0;
 }
-/* line 110, sass/_list-showcase.scss */
+/* line 111, sass/_list-showcase.scss */
 .profile .list p {
   font-size: 0.8125em;
   font-weight: 500;
@@ -3245,13 +3249,13 @@ button {
   margin-bottom: 0;
 }
 
-/* line 122, sass/_list-showcase.scss */
+/* line 123, sass/_list-showcase.scss */
 .list h3 {
   color: red;
   font-weight: 300;
   font-size: 1.1875em;
 }
-/* line 128, sass/_list-showcase.scss */
+/* line 129, sass/_list-showcase.scss */
 .list h4 {
   font-size: 1.1875em;
   font-weight: 500;
